2010-04-09  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: Cannot select elements within iframes with the magnifying glass.

        https://bugs.webkit.org/show_bug.cgi?id=31732

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::inspect):
        (WebCore::InspectorController::handleMousePress):
        * inspector/InspectorController.h:
        * page/EventHandler.cpp:
        (WebCore::EventHandler::handleMousePressEvent):


Canonical link: https://commits.webkit.org/48629@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57337 268f45cc-cd09-0410-ab3c-d52691b4dbfc